fix: align hover color with OCTI

--- a/packages/filigran-ui/src/theme.css
+++ b/packages/filigran-ui/src/theme.css
@@ -165,7 +165,7 @@
   --border-light: var(--gray-800);
   --border-focus: var(--blue-600);
 
-  --hover-background: var(--gray-800);
+  --hover-background: rgba(255, 255, 255, 0.1);
 }
 
 ::-webkit-scrollbar {
